:heavy_check_mark: Сборка #6

--- a/6/catalog.html
+++ b/6/catalog.html
@@ -94,10 +94,10 @@
             oninput="priceoutput.value=pricecount.value"
           >
             <h3 class="main-filter-title">Фильтр</h3>
-            <fieldset class="catalog-filter-group">
+            <fieldset class="filter-group-price">
               <legend class="catalog-filter-title">Стоимость</legend>
               <input
-                class="control-input"
+                class="control-input-price"
                 type="range"
                 name="pricecount"
                 id="pricecount"
@@ -108,7 +108,7 @@
               />
               <output name="priceoutput"></output>
             </fieldset>
-            <fieldset class="catalog-filter-group">
+            <fieldset class="filter-group-color">
               <legend class="catalog-filter-title">Цвет</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
@@ -153,13 +153,13 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="catalog-filter-group">
+            <fieldset class="filter-group-bt">
               <legend class="catalog-filter-title">Bluetooth</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
                     <input
-                      class="control-input"
+                      class="control-input-bt"
                       type="radio"
                       name="bluetooth-support"
                       value="bluetooth-supported"
