--- a/index.html
+++ b/index.html
@@ -53,16 +53,12 @@
               </ul>
             </div>
             <div class="nav-main-wrapper">
-                  <a class="nav-catalog-link" href="catalog.html"
-                    >Каталог товаров</a
-                  >
-                  <button
-                    class="button catalog-button"
-                  ></button>
-                  <span class="visually-hidden"
-                    >Кнопка раскрытия каталога.</span
-                  >
-                <ul class="nav-menu">
+              <a class="nav-catalog-link" href="catalog.html"
+                >Каталог товаров</a
+              >
+              <button class="button catalog-button"></button>
+              <span class="visually-hidden">Кнопка раскрытия каталога.</span>
+              <ul class="nav-menu">
                 <li>
                   <a class="navigation-link" href="#delivery">Доставка</a>
                 </li>
@@ -97,7 +93,9 @@
           </button>
         </div>
         <div class="advantage-container">
-          <h2 class="advantage-title">Порхает как бабочка, жалит, как пчела</h2>
+          <h2 class="title advantage-title">
+            Порхает как бабочка, жалит, как пчела
+          </h2>
           <p class="advantage-description">
             Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
             замаскированным под стандартную камеру.
@@ -251,8 +249,8 @@
         <div class="about-wrapper">
           <h2 class="title about-title">О нас</h2>
           <p class="about-description">
-            Огромный выбор гаджетов не оставит равнодушным гика, который есть в
-            каждом из нас.
+            Огромный выбор гаджетов не оставит равнодушным <br />
+            гика, который есть в каждом из нас.
           </p>
           <p class="about-delivery-description">
             Мы можем доставить ваш товар в самые отдалённые уголки России
@@ -270,8 +268,8 @@
         <div class="contacts-wrapper">
           <h2 class="title contacts-title" id="contacts">Контакты</h2>
           <p class="contacts-description">
-            Вы можете забрать товар сами, заехав в наш офис. Заодно сможете
-            проверить работоспособность покупки.
+            Вы можете забрать товар сами, заехав в наш офис.<br />
+            Заодно сможете проверить работоспособность покупки.
           </p>
           <b class="contacts-subtitle">Интернет-магазин «Девайс»</b>
           <address class="contacts-main">
@@ -289,9 +287,12 @@
         </div>
       </section>
       <section class="newsletter">
-        <div class="newsletter-wrapper container">
+        <div class="newsletter-wrapper">
           <div class="newsletter-description-wrapper">
-            <h2 class="title newsletter-title">Подпишитесь на рассылку</h2>
+            <h2 class="title newsletter-title">
+              Подпишитесь <br />
+              на рассылку
+            </h2>
             <p class="newsletter-description">
               Еженедельный дайджест с обзорами новинок,<br />
               длительными тест-драйвами, распаковками, а также акции,<br />
@@ -319,101 +320,103 @@
       </section>
     </main>
     <footer class="page-footer">
-      <section class="footer-menu">
-        <h3 class="visually-hidden">Услуги и контакты</h3>
-        <a href="index.html">
-          <img
-            class="site-logo"
-            src="images/logo-footer.svg"
-            width="145"
-            height="36"
-            alt="Логотип сайта"
-          />
-        </a>
-        <div class="footer-menu-wrapper container">
-          <h3 class="visually-hidden">Адрес.</h3>
-          <address class="contacts-footer">
-            <p class="contacts-address-text">
-              Санкт-Петербург, набережная реки Карповки, 5, литера П.
-            </p>
-          </address>
-          <h3 class="visually-hidden">Услуги.</h3>
-          <ul class="footer-services-list">
-            <li>
-              <a class="services-item-link" href="#">Доставка</a>
-            </li>
-            <li>
-              <a class="services-item-link" href="#">Гарантия</a>
-            </li>
-            <li>
-              <a class="services-item-link" href="#">Контакты</a>
-            </li>
-          </ul>
-          <h3 class="visually-hidden">Номер телефона.</h3>
-          <a class="contacts-phone-footer" href="tel:+78128121212"
-            >Тел.:+7 (812) 812-12-12</a
-          >
-        </div>
-      </section>
-      <section class="footer-social">
-        <h3 class="visually-hidden">Мы в соцсетях</h3>
-        <div class="footer-social-wrapper container">
-          <span class="social-rectangle">Контентный прямоугольник></span>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a class="button button-social" href="t.me/htmlacademy">
-                <img
-                  class="social-logo"
-                  src="images/telegram.svg"
-                  width="14"
-                  height="12"
-                  alt="иконка телеграм."
-                />
-                <span class="visually-hidden">Телеграм.</span></a
-              >
-            </li>
-            <li class="footer-social-item">
-              <a
-                class="button button-social"
-                href="https://www.youtube.com/user/htmlacademyru"
-              >
-                <img
-                  class="social-logo"
-                  src="images/youtube.svg"
-                  width="16"
-                  height="11"
-                  alt="Иконка youtube."
-                />
-                <span class="visually-hidden">YouTube.</span></a
-              >
-            </li>
-            <li class="footer-social-item">
-              <a
-                class="button button-social"
-                href="https://twitter.com/htmlacademy_ru"
-              >
-                <img
-                  class="social-logo"
-                  src="images/twitter.svg"
-                  width="15"
-                  height="14"
-                  alt="Иконка twitter."
-                />
-                <span class="visually-hidden">Twitter.</span></a
-              >
-            </li>
-          </ul>
-          <a class="academy-logo" href="https://htmlacademy.ru/">
+      <div class="footer-wrapper container">
+        <section class="footer-menu">
+          <h3 class="visually-hidden">Услуги и контакты</h3>
+          <a href="index.html">
             <img
-              class="academy-logo"
-              src="images/html.svg"
-              width="115"
-              height="33"
-              alt="Логотип академии."
+              class="site-logo"
+              src="images/logo-footer.svg"
+              width="145"
+              height="36"
+              alt="Логотип сайта"
             />
           </a>
-        </div>
-      </section>
+          <div class="footer-menu-wrapper container">
+            <h3 class="visually-hidden">Адрес.</h3>
+            <address class="contacts-footer">
+              <p class="contacts-address-text">
+                Санкт-Петербург, набережная реки Карповки, 5, литера П.
+              </p>
+            </address>
+            <h3 class="visually-hidden">Услуги.</h3>
+            <ul class="footer-services-list">
+              <li>
+                <a class="services-item-link" href="#">Доставка</a>
+              </li>
+              <li>
+                <a class="services-item-link" href="#">Гарантия</a>
+              </li>
+              <li>
+                <a class="services-item-link" href="#">Контакты</a>
+              </li>
+            </ul>
+            <h3 class="visually-hidden">Номер телефона.</h3>
+            <a class="contacts-phone-footer" href="tel:+78128121212"
+              >Тел.:+7 (812) 812-12-12</a
+            >
+          </div>
+        </section>
+        <section class="footer-social">
+          <h3 class="visually-hidden">Мы в соцсетях</h3>
+          <div class="footer-social-wrapper container">
+            <span class="social-rectangle">Контентный прямоугольник></span>
+            <ul class="footer-social-list">
+              <li class="footer-social-item">
+                <a class="button button-social" href="t.me/htmlacademy">
+                  <img
+                    class="social-logo"
+                    src="images/telegram.svg"
+                    width="14"
+                    height="12"
+                    alt="иконка телеграм."
+                  />
+                  <span class="visually-hidden">Телеграм.</span></a
+                >
+              </li>
+              <li class="footer-social-item">
+                <a
+                  class="button button-social"
+                  href="https://www.youtube.com/user/htmlacademyru"
+                >
+                  <img
+                    class="social-logo"
+                    src="images/youtube.svg"
+                    width="16"
+                    height="11"
+                    alt="Иконка youtube."
+                  />
+                  <span class="visually-hidden">YouTube.</span></a
+                >
+              </li>
+              <li class="footer-social-item">
+                <a
+                  class="button button-social"
+                  href="https://twitter.com/htmlacademy_ru"
+                >
+                  <img
+                    class="social-logo"
+                    src="images/twitter.svg"
+                    width="15"
+                    height="14"
+                    alt="Иконка twitter."
+                  />
+                  <span class="visually-hidden">Twitter.</span></a
+                >
+              </li>
+            </ul>
+            <a class="academy-logo" href="https://htmlacademy.ru/">
+              <img
+                class="academy-logo"
+                src="images/html.svg"
+                width="115"
+                height="33"
+                alt="Логотип академии."
+              />
+            </a>
+          </div>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
