Исправляет ошибки в микросетках на главной

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         </div>
       </section>
       <section class="newsletter">
-        <div class="newsletter-wrapper">
+        <div class="newsletter-wrapper container">
           <div class="newsletter-description-wrapper">
             <h2 class="title newsletter-title">
               Подпишитесь <br />
@@ -405,6 +405,7 @@
                 >
               </li>
             </ul>
+            <div class="academy-logo-wrapper">
             <a class="academy-logo" href="https://htmlacademy.ru/">
               <img
                 class="academy-logo"
@@ -414,6 +415,7 @@
                 alt="Логотип академии."
               />
             </a>
+          </div>
           </div>
         </section>
       </div>
