--- a/catalog.html
+++ b/catalog.html
@@ -6,67 +6,136 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <header class="container header-menu-container header-wrapper-catalog">
-      <h1 class="visually-hidden">Девайс.</h1>
-      <nav class="navigation-container">
-        <a class="logo" href="index.html">
-          <img
-            class="page-header-logo"
-            src="images/logo.svg"
-            width="145"
-            height="36"
-            alt="Логотип магазина"
-          />
-        </a>
-        <h2 class="visually-hidden">Пользовательская навигация.</h2>
-        <div class="nav-wrapper-user">
-          <ul class="navigation-user">
-            <li class="navigation-item">
-              <form
-                class="search-form"
-                action="https://echo.htmlacademy.ru/"
-                method="get"
-              >
-                <input
-                  class="search-field"
-                  type="text"
-                  name="text"
-                  id="search-field"
-                  placeholder="Текст поиска"
-                />
-                <button class="button search-button">Найти</button>
-              </form>
-            </li>
-            <li class="navigation-item">
-              <a class="button login-button" href="#">Войти</a>
-            </li>
-          </ul>
-          <ul class="compare-cart">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Сравнить</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Корзина</a>
-            </li>
-          </ul>
+    <header class="container">
+      <div class="header-menu-container">
+        <div class="header-wrapper">
+          <h1 class="visually-hidden">Девайс.</h1>
+          <nav class="navigation-container">
+            <a class="page-header-logo" href="index.html">
+              <img
+                src="images/logo.svg"
+                width="145"
+                height="36"
+                alt="Логотип магазина"
+              />
+            </a>
+            <h2 class="visually-hidden">Пользовательская навигация.</h2>
+            <div class="nav-wrapper-user">
+              <ul class="navigation-user">
+                <li class="navigation-item-search">
+                  <form
+                    class="search-form"
+                    action="https://echo.htmlacademy.ru/"
+                    method="get"
+                  >
+                    <input
+                      class="search-field"
+                      type="text"
+                      name="text"
+                      id="search-field"
+                      placeholder="Текст поиска"
+                    /><button class="button search-button" value="Найти">
+                      Найти
+                    </button>
+                  </form>
+                </li>
+                <li class="navigation-item">
+                  <a class="button login-button" href="#">
+                    <svg
+                      class="login-icon"
+                      aria-hidden="true"
+                      focusable="false"
+                      width="14"
+                      height="13"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M.5 12.4h13a6.3 6.3 0 0 0-4.7-5.5c1-.6 1.7-1.7 1.7-3 0-2-1.6-3.5-3.5-3.5a3.5 3.5 0 0 0-3.5 3.5c0 1.3.7 2.4 1.7 3a6.3 6.3 0 0 0-4.7 5.5Z"
+                        fill="#000"
+                      />
+                    </svg>
+                    Войти
+                  </a>
+                </li>
+              </ul>
+              <ul class="compare-cart">
+                <li class="navigation-item">
+                  <a class="link compare" href="#">
+                    <svg
+                      class="compare-icon"
+                      aria-hidden="true"
+                      focusable="false"
+                      width="10"
+                      height="13"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M6 .4H4v12h2V.4ZM2 4.4H0v8h2v-8ZM10 3.4H8v9h2v-9Z"
+                        fill="#000"
+                      />
+                    </svg>
+                    Сравнить</a
+                  >
+                </li>
+                <li class="navigation-item">
+                  <a class="link cart" href="#">
+                    <svg
+                      class="cart-icon"
+                      aria-hidden="true"
+                      focusable="false"
+                      width="16"
+                      height="15"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="m15.3 5.4-3.5.2-3.2-5L8 .5c-.2 0-.5 0-.6.3L4.2 5.6H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1 1.4 1h9.4c.7 0 1.2-.3 1.4-1l1.9-7v-.1c0-.4-.3-.8-.7-.8ZM8 2.3l2.2 3.2H5.9L8 2.3Z"
+                        fill="#000"
+                      />
+                    </svg>
+                    Корзина</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="nav-main-wrapper">
+              <a class="button catalog-button" href="catalog.html">
+                Каталог товаров
+                <svg
+                  class="catalog-icon"
+                  aria-hidden="true"
+                  focusable="false"
+                  width="16"
+                  height="17"
+                  viewBox="0 0 16 17"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path d="M16 7.39H9v-7H7v7H0v2h7v7h2v-7h7v-2Z" fill="#000" />
+                </svg>
+              </a>
+              <span class="visually-hidden">Кнопка раскрытия каталога.</span>
+              <ul class="nav-menu">
+                <li>
+                  <a class="link nav-delivery-link" href="#delivery"
+                    >Доставка</a
+                  >
+                </li>
+                <li>
+                  <a class="link nav-warranty-link" href="#">Гарантия</a>
+                </li>
+                <li>
+                  <a class="link nav-contacts-link" href="#contacts"
+                    >Контакты</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </nav>
         </div>
-        <div class="nav-main-wrapper">
-          <a class="nav-catalog-link" href="catalog.html">Каталог товаров</a>
-          <button class="button catalog-button"></button>
-          <span class="visually-hidden">Кнопка раскрытия каталога.</span>
-          <ul class="nav-menu">
-            <li>
-              <a class="navigation-link" href="#delivery">Доставка</a>
-            </li>
-            <li>
-              <a class="button navigation-button" href="#">Гарантия</a>
-            </li>
-            <li>
-              <a class="navigation-link" href="#contacts">Контакты</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      </div>
     </header>
     <main class="main-inner">
       <header class="container inner-header">
@@ -79,7 +148,9 @@
             <a class="breadcrumbs-link" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link">Моноподы для селфи</a>
+            <a class="breadcrumbs-link" href="catalog.html"
+              >Моноподы для селфи</a
+            >
           </li>
         </ul>
       </header>
@@ -403,16 +474,16 @@
               </li>
             </ul>
             <div class="academy-logo-wrapper">
-            <a class="academy-logo" href="https://htmlacademy.ru/">
-              <img
-                class="academy-logo"
-                src="images/html.svg"
-                width="115"
-                height="33"
-                alt="Логотип академии."
-              />
-            </a>
-          </div>
+              <a class="academy-logo" href="https://htmlacademy.ru/">
+                <img
+                  class="academy-logo"
+                  src="images/html.svg"
+                  width="115"
+                  height="33"
+                  alt="Логотип академии."
+                />
+              </a>
+            </div>
           </div>
         </section>
       </div>
