Создает декоративные псевдоэлементы

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                       name="text"
                       id="search-field"
                       placeholder="Текст поиска"
-                    /><button class="button search-button" value="Найти">
+                    />
+                    <label for="search-field" class="search-label"></label><button class="button search-button" value="Найти">
                       Найти
                     </button>
                   </form>
