--- a/catalog.html
+++ b/catalog.html
@@ -431,7 +431,7 @@
             <span class="social-rectangle">Контентный прямоугольник></span>
             <ul class="footer-social-list">
               <li class="footer-social-item">
-                <a class="button button-social" href="t.me/htmlacademy">
+                <a class="social-link" href="t.me/htmlacademy">
                   <img
                     class="social-logo"
                     src="images/telegram.svg"
@@ -444,7 +444,7 @@
               </li>
               <li class="footer-social-item">
                 <a
-                  class="button button-social"
+                  class="social-link"
                   href="https://www.youtube.com/user/htmlacademyru"
                 >
                   <img
@@ -459,7 +459,7 @@
               </li>
               <li class="footer-social-item">
                 <a
-                  class="button button-social"
+                  class="social-link"
                   href="https://twitter.com/htmlacademy_ru"
                 >
                   <img
