--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                       id="search-field"
                       placeholder="Текст поиска"
                     />
-                    <label for="search-field" class="search-label"></label><button class="button search-button" value="Найти">
-                      Найти
+                    <label for="search-field" class="search-label"></label><button class="search-button" value="Найти">
+                      <span class="button-text">Найти</span>
                     </button>
                   </form>
                 </li>
@@ -190,7 +190,7 @@
             <div class="pagination-wrapper">
               <ul class="slider-pagination">
                 <li class="slider-pagination-item">
-                  <a class="button slider-pagination-button-current" href="#">
+                  <button class="button slider-pagination-button-current" href="#">
                     <svg
                       class="slider-current-icon"
                       aria-hidden="true"
@@ -214,7 +214,7 @@
                   </a>
                 </li>
                 <li class="slider-pagination-item">
-                  <a class="button slider-pagination-button" href="#">
+                  <button class="button slider-pagination-button" href="#">
                     <svg
                       class="slider-current-icon"
                       aria-hidden="true"
@@ -230,7 +230,7 @@
                   </a>
                 </li>
                 <li class="slider-pagination-item">
-                  <a class="button slider-pagination-button" href="#">
+                  <button class="button slider-pagination-button" href="#">
                     <svg
                       class="slider-current-icon"
                       aria-hidden="true"
@@ -247,7 +247,7 @@
                 </li>
               </ul>
             </div>
-            <a class="button button-more" href="#">
+            <button class="button button-more" >
               <span class="more-text">Подробнее</span>
             </a>
           </div>
@@ -350,13 +350,13 @@
           <div class="services-list-wrapper">
             <ul class="services-list">
               <li class="services-item">
-                <a class="button button-delivery" href="#"><span class="delivery-text">Доставка</span></a>
+                <button class="button button-delivery" href="#"><span class="delivery-text">Доставка</span></a>
               </li>
               <li class="services-item">
-                <a class="button button-warranty" href="#"><span class="warranty-text">Гарантия</span></a>
+                <button class="button button-warranty" href="#"><span class="warranty-text">Гарантия</span></a>
               </li>
               <li class="services-item">
-                <a class="button button-credit" href="#"><span class="credit-text">Кредит</a>
+                <button class="button button-credit" href="#"><span class="credit-text">Кредит</a>
               </li>
             </ul>
           </div>
@@ -371,7 +371,7 @@
         </div>
       </section>
       <div class="delivery-notice container">
-        <a class="button delivery-notice-link" href="#">
+        <button class="button delivery-notice-link" href="#">
           <svg
                   class="delivery-car-icon" 
                   aria-hidden="true"
@@ -407,7 +407,7 @@
             <li class="about-delivery-description-item"><b>СДИК</b></li>
             <li class="about-delivery-description-item"><b>ТоксБерри</b></li>
           </ul>
-          <a class="more-about" href="#"><span class="about-text">Подробнее о нас</span></a>
+          <button class="more-about" href="#"><span class="about-text">Подробнее о нас</span></a>
         </div>
         <div class="contacts-wrapper">
           <h2 class="title contacts-title" id="contacts">Контакты</h2>
@@ -427,7 +427,7 @@
             <li class="schedule-item">пн—пт: с 10:00 до 22:00</li>
             <li class="schedule-item">сб—вс: с 10:00 до 19:00</li>
           </ul>
-          <a class="contact-us" href="#"><span class="contact-text">Напишите нам</span></a>
+          <button class="button contact-us" href="#"><span class="contact-text">Напишите нам</span></a>
         </div>
       </section>
       <section class="newsletter">
@@ -455,7 +455,7 @@
                 name="email"
                 placeholder="Ваш e-mail"
                 required
-              /><a class="button subscribe-button" href="#">Подписаться</a>
+              /><button class="button subscribe-button" href="#">Подписаться</button>
             </form>
             <span class="warning">Это бесплатно</span>
           </div>
@@ -503,11 +503,11 @@
         <section class="footer-social">
           <h3 class="visually-hidden">Мы в соцсетях</h3>
           <div class="footer-social-wrapper container">
-            <span class="social-rectangle">Контентный прямоугольник></span>
+            <span class="social-rectangle">Декоративный прямоугольник></span>
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a
-                  class="button button-social-telegram"
+                  class="social-link"
                   href="t.me/htmlacademy"
                 >
                   <svg
@@ -522,7 +522,7 @@
                   >
                     <path
                       d="M12.4431 0.0735832L0.623071 4.63158C-0.183596 4.95558 -0.178929 5.40558 0.475071 5.60625L3.50974 6.55292L10.5311 2.12292C10.8631 1.92092 11.1664 2.02958 10.9171 2.25092L5.2284 7.38492H5.22707L5.2284 7.38558L5.01907 10.5136C5.32574 10.5136 5.46107 10.3729 5.63307 10.2069L7.10707 8.77358L10.1731 11.0382C10.7384 11.3496 11.1444 11.1896 11.2851 10.5149L13.2977 1.02958C13.5037 0.203583 12.9824 -0.170417 12.4431 0.0735832Z"
-                      fill="#444444"
+                      fill="currentColor"
                     />
                   </svg>
                   <span class="visually-hidden">Телеграм.</span></a
@@ -530,7 +530,7 @@
               </li>
               <li class="footer-social-item">
                 <a
-                  class="button button-social"
+                  class="social-link"
                   href="https://www.youtube.com/user/htmlacademyru"
                 >
                   <svg
@@ -544,7 +544,7 @@
                   >
                     <path
                       d="m15.7 1.7-.5-.9a2 2 0 0 0-1-.5C13 0 8 0 8 0 6 0 3.8 0 1.7.3L.8.8a2 2 0 0 0-.5.9A19.4 19.4 0 0 0 .3 9l.5.8c.3.3.6.5 1 .5 1.2.4 6.2.4 6.2.4l6.3-.3.9-.5.5-.9a19 19 0 0 0 0-7.3Zm-9.3 6V3l4.2 2.2-4.2 2.3Z"
-                      fill="#444"
+                      fill="currentColor"
                     />
                   </svg>
                   <span class="visually-hidden">YouTube.</span></a
@@ -552,7 +552,7 @@
               </li>
               <li class="footer-social-item">
                 <a
-                  class="button button-social-twitter"
+                  class="social-link"
                   href="https://twitter.com/htmlacademy_ru"
                 >
                   <svg
@@ -560,14 +560,14 @@
                     aria-hidden="true"
                     focusable="false"
                     width="15"
-                    height="15"
-                    viewBox="0 0 15 15"
+                    height="14"
+                    viewBox="0 0 14 14"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
                     <path
                       d="M9.7 0.155143C11.2 -0.344857 12.3 0.455143 12.9 1.25514C13.4 1.05514 14 0.855143 14.6 0.655143C14.6 1.45514 14.1 2.05514 13.8 2.25514C14.5 2.45514 15 1.85514 15 1.85514C14.9 2.75514 14.1 3.55514 13.6 3.75514C13.4 10.0551 10.8 14.1551 4.7 14.0551C4.2 14.0551 4.8 14.0551 4.3 14.0551C4 14.0551 0.6 13.6551 0 12.2551C2 12.4551 3.4 11.8551 4.1 11.1551C3.3 10.8551 1.7 10.7551 1.5 8.35514C1.8 8.55514 2 8.65514 2.6 8.55514C1.5 7.75514 0.3 7.05514 0.4 5.05514C0.7 5.35514 1.3 5.55514 1.6 5.45514C1 5.25514 -0.2 2.35514 0.8 0.855143C2.4 2.55514 4.1 4.25514 7.1 4.35514C7.3 2.25514 8.1 0.855143 9.7 0.155143Z"
-                      fill="#444444"
+                      fill="currentColor"
                     />
                   </svg>
                   <span class="visually-hidden">Twitter.</span></a
